What:
    feat: new UI for main view
    feat: update credits view
    doc: new build of HTML JavaDoc
    chore: new run of Lint, code analysis, UT and IT
    chore: closed tasks #69
###################################################
Date: 18/06/2016
What:
    feat: deal with the new permissions system provided by Android 6 and API 23+
    feat: frequency of screen captures
    fix: bug with unit time in the config file
    fix: bug where notifications removed when finishing main activity in standalone mode
    fix: bug where splash screen displayed even if standalone mode running
    chore: closed tasks #57, #83
###################################################
Date: 22/06/2016
What:
    feat: new preferences screen
    feat: ring during each click
    test: new IT for StandaloneDialog
    chore: closed tasks #83, #80, #51, #84
    chore: update and optimized the credits view
    chore: more logs on UT and IT
    refactor: refactor the intro screen's pages to get its string values and put them in arrays
###################################################
Date: 30/06/2016
What:
    feat: possible to define the names of the files to sue
    feat: improved GUI with kind of labels to give focus to items
    feat: random point when long click on the select multipoint screen
    fix: JSON export files format / indentations
    refactor: the main view
    chore: closed tasks #86, #87, #89
###################################################
Date: 01/07/2016
What:
    feat: time MS for unit time
    doc: update HTML JavaDOC
    chore: new run of Lint, code analysis, unit tests and instrumented tests
###################################################
Date:
What:

###################################################
Date:
What:

###################################################
Date:
What:

###################################################
Date:
What:

###################################################
Date:
What:

###################################################