@@ -27,34 +27,25 @@ LAST TASK : #92
 
 TO DO
 
-    Task #93 : [v2.0.0] Replace material arc menu by bottom action bar / add option to use on of them or the other one?
-    *Task #90 : [v2.0.0] Time ms for click (to add to s / m / h) with default values in fields which will be disabled (prevent from problems)
-                        --> test this feature
-                        --> update and check all unit and instrumented tests
-    Task #79 : [v2.0.0] Update i18n files: regenerate STRING and ARRAY values files from the english one
+    *Task #79 : [v2.0.0] Update i18n files: regenerate STRING and ARRAY values files from the english one
     Task #78 : [v2.0.0] Better support for tablets and devices: check intro screen, splash screen, landscape, portrait
-    Task #91 : [v2.0.0] Update readme and wiki (new features, sue the modes, je files, ...)
+    Task #91 : [v2.0.0] Update readme and wiki (new features, use the modes, the files, ...)
     Task #60 : [memo] ==> new tests and runs of Lint, UT and IT ; update the readme, the wiki, the what's new and the repo, new release after git tag
 
 
 
+    Task #93 : [vx.x.x] Replace material arc menu by bottom action bar / add option to use one of them or the other one?
     Task #16 : [vx.x.x] Handle swipes (so new verbatims, new notifications, ...) : /system/bin/input swipe x1 y1 x2 y2
     Task #2  : [vx.x.x] Movable floating action button
-    Task #34 : Load LUA scripts to make the clicks
+    Task #34 : [vx.x.x] Load LUA scripts to make the clicks
     Task #52 : [vx.x.x] Make the clicks and the other actions without root nor SU : JNI ?
                         (avoid use of Instrumentation and system-permission-signed-app for security reasons)
     Task #61 : [vx.x.x] More Unit tests with JUnit and Mockito
 
 
 
+    Task #36 : Date picker to define a time period when clicks process can be done
     Task #48 : Check if ProGuard can rise errors or make unexpected behaviours in the app because of ClassNotFound of bad optimization
                         (http://developer.android.com/tools/help/proguard.html)
-    Task #36 : Date picker to define a time period when clicks process can be done
     Task #35 : Fabric.io, Crashlytics or other tools for bug tracking
     Task #37 : Android Wear support
-
-
-
-
-
-
